# Rustagon

./: README.md  Rustagon.code-workspace
emulator/: Cargo.toml  README.md
emulator/src/tasks/wasm/: context.rs  mod.rs  protocol.rs  timers.rs
emulator/src/utils/: mod.rs
firmware/: .env  .gitignore  Cargo.toml  README.md  deploy.sh  inject-fat.sh  partitions.csv  run.sh  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/partitions-macro/: Cargo.toml
firmware/partitions-macro/src/: lib.rs
firmware/src/apps/: app_store.rs  common.rs  mod.rs  ota_updater.rs
firmware/src/lib/: device.rs  i2c.rs  mod.rs  protocol.rs  types.rs
firmware/src/native/: common.rs  example_async.rs  mod.rs
firmware/src/tasks/: i2c.rs  led.rs  mod.rs  system.rs  wifi.rs
firmware/src/tasks/http/: common.rs  config.rs  delete_file.rs  list_files.rs  mod.rs  ota.rs  read_file.rs  receive_file.rs  web_socket.rs  wifi_join.rs  wifi_scan.rs  write_file.rs
firmware/src/tasks/lcd/: common.rs  mod.rs
firmware/src/tasks/menu/: execute.rs  menus.rs  mod.rs  state.rs  types.rs
firmware/src/tasks/wasm/: context.rs  mod.rs  timers.rs
firmware/src/utils/: bq25895.rs  cpu_guard.rs  dns.rs  flash_stream.rs  gpio.rs  graphics.rs  http.rs  i2c.rs  led_service.rs  local_fs.rs  mod.rs  ota.rs  spi.rs  state.rs
firmware/web-flash-tool/: index.html  manifest.json
sdk/: Cargo.toml  README.md  build.sh
sdk/.cargo/: config.toml
sdk/.zed/: settings.json
sdk/src/lib/: allocator.rs  graphics.rs  helper.rs  http.rs  mod.rs  protocol.rs  sleep.rs  tasks.rs
web/: .gitignore  deploy.sh  generate-manifest.ts  index.html
web/public/wasm/: manifest.json
web/src/: App.tsx
web/src/components/: index.ts
web/src/components/BadgeEmulator/: index.tsx  style.scss
web/src/components/BadgeRemote/: index.tsx  style.scss
web/src/lib/device/: badge.ts  common.ts  index.ts
web/src/routes/: config.tsx  emulator.tsx  index.tsx  remote.tsx
