[package]
name = "rust-wasm-experiments"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

anyhow = { version = "1.0.100", default-features = false }
byteorder = "1.5.0"
bytes = { version = "1.11.0", default-features = false }
eyre = "0.6.12"
rand = "0.9.2"
reqwest = "0.13.1"
sysinfo = "0.37.2"
tinywasm = "0.8.0"
tokio = { version = "1.49.0", features = ["full"] }
wasmi = { version = "1.0.7", features = [] }
wasmi_core = "1.0.7"
wasmi_wasi = "1.0.7"
wat = "1.244.0"
zerocopy = "0.8.33"
critical-section = { version = "1.0", features = ["std"] }
minifb = "0.28.0"
