[package]
name    = "esp32s3-wasm-test"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-backtrace", features = [
    "panic-handler",
    "esp32s3",
    "println"
] }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-bootloader-esp-idf", features = ["esp32s3"] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal", features = ["log-04", "unstable", "esp32s3", "psram"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-rtos", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
  "log-04",
] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-println", features = ["esp32s3", "log-04"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-alloc", features = ["esp32s3", "nightly"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-radio", features = [
  "esp-alloc",
  "esp32s3",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-storage", features = ["esp32s3"] }

embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = "0.5.0"
embassy-net = { version = "0.8.0", features = ["dhcpv4", "medium-ethernet", "medium-ip", "tcp", "udp", "dhcpv4-hostname", "dns"] }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-embedded-hal = "0.5.0"

embedded-nal-async = "0.9.0"
embedded-storage = "0.3.1"
embedded-io = { version = "0.7.1", features = ["alloc"] }
embedded-io-async = { version = "0.7.0", features = ["alloc"] }
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

edge-dhcp = "0.7.0"
edge-nal = "0.6.0"
edge-nal-embassy = { version = "0.8.1", default-features = false, features = ["dhcpv4", "dhcpv4-hostname", "dns", "proto-ipv4", "tcp", "udp", "medium-ethernet", "medium-ip"] }

wasmi = { git = "https://github.com/cjdell/wasmi.git", branch = "psram", package = "wasmi", default-features = false }
wasmi_core = { git = "https://github.com/cjdell/wasmi.git", branch = "psram", package = "wasmi_core", default-features = false }

serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.149", default-features = false, features = ["alloc"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

static_cell = "2.1.1"
anyhow = { version = "1.0.100", default-features = false }
bytes = { version = "1.11.0", default-features = false }
zerocopy = { version = "0.8.33", default-features = false }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "multicast", "proto-dhcpv4", "proto-dns", "proto-ipv4", "socket-dns", "socket-icmp", "socket-raw", "socket-tcp", "socket-udp"] }
reqwless = { version = "0.14.0", default-features = false, features = ["alloc"] }
picoserve = { git = "https://github.com/sammhicks/picoserve.git", features = ["alloc", "embassy", "ws"] }
fatfs = { version = "0.4.0", default-features = false, features = ["alloc"], git = "https://github.com/rafalh/rust-fatfs" }
log = "0.4.29"
partitions-macro = { path = "./partitions-macro" }
gc9a01-rs = "0.4.2"
display-interface = "0.5.0"
aw9523b = "0.1.0"
display-interface-spi = "0.5.0"
critical-section = "1.2.0"
edge-captive = "0.7.0"
micromath = "2.1.0"
crc = "3.4.0"

[dev-dependencies]
embedded-test = { version = "0.7.0", features = [
    "xtensa-semihosting",
    "embassy",
    "external-executor"
] }

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
